# attackr

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.sh
examples/activity/: simple.koto
examples/challenges/: README.md
examples/challenges/binary/: build.yml  challenge.c
examples/challenges/docker/: Dockerfile  build.yml
examples/configs/: activity.yml  challenge.yml  event.yml  user.yml
examples/dynpoints/: simple.koto
migrations/2024-09-28-125657_init/: down.sql  up.sql
migrations/2024-11-05-021926_add-points/: down.sql  up.sql
migrations/2024-11-05-141321_add-nickname/: down.sql  up.sql
migrations/2024-11-07-094130_unique-username/: down.sql  up.sql
migrations/2024-11-07-111455_add-difficulty/: down.sql  up.sql
migrations/2024-11-13-145509_add-user-random/: down.sql  up.sql
src/: main.rs
src/activity/: challenge.rs  mod.rs
src/configs/: activity.rs  challenge.rs  event.rs  mod.rs  user.rs
src/core/: conductor.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs  types.rs
src/db/query/: artifact.rs  challenge.rs  difficulty.rs  mod.rs  problemset.rs  scores.rs  solved.rs  submission.rs  user.rs
src/functions/: challenge.rs  event.rs  mod.rs  user.rs
src/pages/: error.rs  mod.rs
src/pages/admin/: artifact.rs  challenge.rs  difficulty.rs  mod.rs  problemset.rs  root.rs  submission.rs  user.rs
src/pages/core/: challenge.rs  mod.rs  root.rs  scoreboard.rs  user.rs
src/utils/: dynfmt.rs  fsext.rs  jinja.rs  mod.rs  query.rs  responder.rs  script.rs  webcolor.rs
static/css/: markdown.css
static/js/: markdown.js  name-renderer.js
templates/: base.html.j2  error.html.j2
templates/admin/: base.html.j2  error.html.j2  index.html.j2
templates/admin/artifact/: detail.html.j2  index.html.j2
templates/components/: flash.html.j2
templates/core/: base.html.j2  error.html.j2  index.html.j2
templates/functions/: points.html.j2  time.html.j2
(+24 files in other folders)
