[package]
name = "attackr"
version = "0.1.1"
edition = "2021"

[lints.clippy]
result_large_err = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
async-tempfile = { version = "0.6.0", features = ["uuid"] }
bollard = { version = "0.17.0", features = ["buildkit"] }
diesel = { version = "2.2.2", features = ["returning_clauses_for_sqlite_3_35", "time"] }
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.2.0"
either = { version = "1.13.0", features = ["serde"] }
flate2 = "1.0.33"
futures-util = "0.3.30"
itertools = "0.13.0"
koto = "0.14.1"
koto_json = { version = "0.14.1", optional = true }
koto_random = { version = "0.14.1", optional = true }
koto_tempfile = { version = "0.14.1", optional = true }
log = "0.4.22"
moka = { version = "0.12.8", features = ["future"] }
num_enum = "0.7.3"
rand = { version = "0.9.1", default-features = false, features = ["thread_rng", "std"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.127"
serde_yml = "0.0.12"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4.41"
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.40.0", features = ["process", "rt"] }
uuid = { version = "1.10.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[features]
koto_exec = []
koto_json = ["dep:koto_json"]
koto_random = ["dep:koto_random"]
koto_tempfile = ["dep:koto_tempfile"]
activity = ["koto_json"]
